[gd_scene load_steps=14 format=3 uid="uid://lbs0vilymbum"]

[ext_resource type="PackedScene" uid="uid://cidd3q2tet7ku" path="res://scenes/units/abstract/controlled_unit.tscn" id="1_66kao"]
[ext_resource type="Script" path="res://scripts/units/abstract/controlled_ant_unit.gd" id="2_77pj2"]
[ext_resource type="PackedScene" uid="uid://bi231xk2sp410" path="res://assets/models/ant.glb" id="2_e21vo"]
[ext_resource type="AudioStream" uid="uid://ds7c5gkf1mssj" path="res://assets/audio/units/ant_move.wav" id="4_80pw8"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lip5d"]
animation = &"idle"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_7c5f2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0h55w"]
animation = &"plop_down"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_wsc5y"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Body", "Armature/Skeleton3D:Leg_back_mid_L", "Armature/Skeleton3D:Leg_back_mid_R", "Armature/Skeleton3D:Leg_back_root_L", "Armature/Skeleton3D:Leg_back_root_R", "Armature/Skeleton3D:Leg_back_tip_L", "Armature/Skeleton3D:Leg_back_tip_R", "Armature/Skeleton3D:Leg_front_mid_L", "Armature/Skeleton3D:Leg_front_mid_R", "Armature/Skeleton3D:Leg_front_root_L", "Armature/Skeleton3D:Leg_front_root_R", "Armature/Skeleton3D:Leg_front_tip_L", "Armature/Skeleton3D:Leg_front_tip_R", "Armature/Skeleton3D:Leg_mid_mid_L", "Armature/Skeleton3D:Leg_mid_mid_R", "Armature/Skeleton3D:Leg_mid_root_L", "Armature/Skeleton3D:Leg_mid_root_R", "Armature/Skeleton3D:Leg_mid_tip_L", "Armature/Skeleton3D:Leg_mid_tip_R"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3qepx"]
animation = &"plop_up"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_4ftkg"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Body", "Armature/Skeleton3D:Leg_back_mid_L", "Armature/Skeleton3D:Leg_back_mid_R", "Armature/Skeleton3D:Leg_back_root_L", "Armature/Skeleton3D:Leg_back_root_R", "Armature/Skeleton3D:Leg_back_tip_L", "Armature/Skeleton3D:Leg_back_tip_R", "Armature/Skeleton3D:Leg_front_mid_L", "Armature/Skeleton3D:Leg_front_mid_R", "Armature/Skeleton3D:Leg_front_root_L", "Armature/Skeleton3D:Leg_front_root_R", "Armature/Skeleton3D:Leg_front_tip_L", "Armature/Skeleton3D:Leg_front_tip_R", "Armature/Skeleton3D:Leg_mid_mid_L", "Armature/Skeleton3D:Leg_mid_mid_R", "Armature/Skeleton3D:Leg_mid_root_L", "Armature/Skeleton3D:Leg_mid_root_R", "Armature/Skeleton3D:Leg_mid_tip_L", "Armature/Skeleton3D:Leg_mid_tip_R"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_grmq1"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_4gyt5"]
graph_offset = Vector2(-327.784, 80.2142)
nodes/idle_anim/node = SubResource("AnimationNodeAnimation_lip5d")
nodes/idle_anim/position = Vector2(-320, 80)
nodes/locomotion_blend/node = SubResource("AnimationNodeBlend2_7c5f2")
nodes/locomotion_blend/position = Vector2(-100, 120)
nodes/output/position = Vector2(680, 160)
nodes/plop_down_anim/node = SubResource("AnimationNodeAnimation_0h55w")
nodes/plop_down_anim/position = Vector2(-40, 360)
nodes/plop_down_oneshot/node = SubResource("AnimationNodeOneShot_wsc5y")
nodes/plop_down_oneshot/position = Vector2(180, 140)
nodes/plop_up_anim/node = SubResource("AnimationNodeAnimation_3qepx")
nodes/plop_up_anim/position = Vector2(260, 400)
nodes/plop_up_oneshot/node = SubResource("AnimationNodeOneShot_4ftkg")
nodes/plop_up_oneshot/position = Vector2(440, 140)
nodes/walk_anim/node = SubResource("AnimationNodeAnimation_grmq1")
nodes/walk_anim/position = Vector2(-320, 220)
node_connections = [&"locomotion_blend", 0, &"idle_anim", &"locomotion_blend", 1, &"walk_anim", &"output", 0, &"plop_up_oneshot", &"plop_down_oneshot", 0, &"locomotion_blend", &"plop_down_oneshot", 1, &"plop_down_anim", &"plop_up_oneshot", 0, &"plop_down_oneshot", &"plop_up_oneshot", 1, &"plop_up_anim"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8admi"]
height = 0.5

[node name="ControlledAntUnit" instance=ExtResource("1_66kao")]
script = ExtResource("2_77pj2")

[node name="AntModel" parent="." index="0" instance=ExtResource("2_e21vo")]

[node name="Skeleton3D" parent="AntModel/Armature" index="0"]
bones/4/rotation = Quaternion(0.587858, -5.43255e-07, -3.94772e-07, 0.808964)
bones/6/rotation = Quaternion(0.330686, -3.0116e-14, -4.44141e-07, 0.943741)
bones/9/rotation = Quaternion(0.587858, 5.43255e-07, 3.94772e-07, 0.808964)
bones/11/rotation = Quaternion(0.330686, 3.0116e-14, 4.44141e-07, 0.943741)
bones/14/rotation = Quaternion(4.60304e-08, 0.0294697, 0.999566, -5.43234e-07)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(4.55913e-08, 0.0294697, 0.999566, -4.34329e-07)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(4.55913e-08, 0.0294697, 0.999566, -4.34329e-07)
bones/16/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.0294712, -6.21995e-15, 4.35675e-07, 0.999566)
bones/19/rotation = Quaternion(0.0294712, -5.33139e-15, 4.35675e-07, 0.999566)
bones/20/rotation = Quaternion(0.0294712, -6.21995e-15, 4.35675e-07, 0.999566)
bones/21/rotation = Quaternion(0.0294712, -6.21995e-15, 4.35675e-07, 0.999566)
bones/22/rotation = Quaternion(0.0294712, -6.21995e-15, 4.35675e-07, 0.999566)
bones/23/rotation = Quaternion(0.0294712, -5.33139e-15, 4.35675e-07, 0.999566)
bones/24/rotation = Quaternion(0.0294712, -6.21995e-15, 4.35675e-07, 0.999566)
bones/25/rotation = Quaternion(0.0294712, -5.33139e-15, 4.35675e-07, 0.999566)
bones/26/rotation = Quaternion(-0.221628, 0.221633, -0.671475, 0.671477)
bones/27/rotation = Quaternion(0.583948, -8.29882e-08, 2.36539e-06, 0.811791)
bones/27/scale = Vector3(1, 1, 1)
bones/28/rotation = Quaternion(-0.84146, 6.60837e-08, -6.26108e-06, 0.54032)
bones/30/rotation = Quaternion(0.583949, -2.24752e-07, 2.46641e-06, 0.811791)
bones/31/rotation = Quaternion(-0.84146, 1.69298e-07, -6.42962e-06, 0.54032)
bones/32/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(-0.841459, 1.31575e-07, -6.3826e-06, 0.540321)
bones/34/scale = Vector3(1, 1, 1)
bones/35/rotation = Quaternion(-0.221628, -0.221633, 0.671475, 0.671477)
bones/36/rotation = Quaternion(0.583948, 8.29882e-08, -2.36539e-06, 0.811791)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(-0.84146, -6.60837e-08, 6.26108e-06, 0.54032)
bones/39/rotation = Quaternion(0.583949, 2.24752e-07, -2.46641e-06, 0.811791)
bones/40/rotation = Quaternion(-0.84146, -1.69298e-07, 6.42962e-06, 0.54032)
bones/41/scale = Vector3(1, 1, 1)
bones/43/rotation = Quaternion(-0.841459, -1.31575e-07, 6.3826e-06, 0.540321)
bones/43/scale = Vector3(1, 1, 1)

[node name="GathererMesh" parent="AntModel/Armature/Skeleton3D" index="0"]
visible = false

[node name="NitwitMesh" parent="AntModel/Armature/Skeleton3D" index="1"]
visible = false

[node name="AnimationPlayer" parent="AntModel" index="1"]
deterministic = true

[node name="AnimationTree" parent="." index="1"]
root_node = NodePath("../AntModel")
tree_root = SubResource("AnimationNodeBlendTree_4gyt5")
anim_player = NodePath("../AntModel/AnimationPlayer")
parameters/locomotion_blend/blend_amount = 0
parameters/plop_down_oneshot/active = false
parameters/plop_down_oneshot/internal_active = false
parameters/plop_down_oneshot/request = 0
parameters/plop_up_oneshot/active = false
parameters/plop_up_oneshot/internal_active = false
parameters/plop_up_oneshot/request = 0

[node name="CollisionShape3D" parent="." index="2"]
shape = SubResource("CylinderShape3D_8admi")

[node name="HoverIndicator" parent="." index="3"]
transform = Transform3D(1.3376, 0, 0, 0, 1.3376, 0, 0, 0, 1.3376, 0, 0, 0)

[node name="VisibleOnScreenNotifier3D" parent="." index="5"]
aabb = AABB(-0.5, 0, -0.5, 1, 0.5, 1)

[node name="UiOrigin" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)

[node name="SelectionIndicator" parent="." index="7"]
transform = Transform3D(0.772715, 0, 0, 0, 0.772715, 0, 0, 0, 0.772715, 0, 0, 0)

[node name="MoveSoundPlayer" parent="." index="11"]
stream = ExtResource("4_80pw8")
attenuation_filter_db = 0.0

[node name="Decal" parent="." index="12"]
size = Vector3(1.5, 1, 1.5)

[editable path="AntModel"]
